# Schematic

./: .gitignore  AppMain.cpp  AppMain.h  CMakeLists.txt  DotSizeDialog.cpp  DotSizeDialog.h  FrameMain.cpp  FrameMain.h  Grid.cpp  Grid.h  Item.cpp  Item.h  LICENSE.txt  NewSchematicDialog.cpp  NewSchematicDialog.h  README.md  Resources.cpp  Resources.h  WindowGrid.cpp  WindowGrid.h  constants.h  id.h  vcpkg.json
